Use static Collection factories
Searched for ".unmodifiable(" and "Arrays.asList(" to find suitable
applications.